[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
memoize = "0.4.1"
rayon = "1.8.0"
syn = "2.0.39"

[lib]
proc-macro = true

[profile.release]
debug = true
lto = true
